# Sathi-Language

./: CHANGELOG.md  README.md  pyproject.toml  sathi.py  setup.cfg
docs/: syntax-list.md
examples/: hello.sathi
sathi_lang/: __init__.py  __main__.py
sathi_lang.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
vscode-extension/: README.md  language-configuration.json  package.json  sathi-lang-0.1.0.vsix  sathi-lang-0.1.1.vsix  sathi-lang-1.2.1.vsix
vscode-extension/snippets/: sathi.json
vscode-extension/syntaxes/: sathi.tmLanguage.json
